@@ -14,7 +14,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: execute.test,v 1.13.2.3 2008/03/07 19:10:03 dgp Exp $
+# RCS: @(#) $Id: execute.test,v 1.13.2.4 2008/03/07 20:26:22 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -35,6 +35,8 @@ catch {unset msg}
 
 ::tcltest::testConstraint longIs32bit \
 	[expr {int(0x80000000) < 0}]
+::tcltest::testConstraint testexprlongobj \
+	[llength [info commands testexprlongobj]]
 
 # Tests for the omnibus TclExecuteByteCode function:
 
